# lattice

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.downloader  LICENSE  README.md  build.rs  docker-compose.yaml  endurance-test.sh  rsync.sh  tarpaulin.toml  versions.toml
.codebase-memory/: adr.md
.github/workflows/: cilium-fips.yaml  istio-fips.yaml  lattice.yaml
benches/: service_graph.rs
charts/cilium-fips/: values.yaml
charts/istio-fips/: values.yaml
crates/lattice-agent/: Cargo.toml
crates/lattice-api/: Cargo.toml
crates/lattice-backup/: Cargo.toml
crates/lattice-cache/: Cargo.toml
crates/lattice-capi/: Cargo.toml  build.rs
crates/lattice-capi/src/: client.rs  constants.rs  installer.rs  lib.rs
crates/lattice-capi/src/provider/: aws.rs  basis.rs  docker.rs  kube_vip.rs  mod.rs  openstack.rs  proxmox.rs  registry.rs
crates/lattice-cedar/: Cargo.toml
crates/lattice-cell/: Cargo.toml
crates/lattice-cert-issuer/: Cargo.toml
crates/lattice-cert-manager/: Cargo.toml  build.rs
crates/lattice-cert-manager/src/: lib.rs
crates/lattice-cert-manager/src/install/: controller.rs  ensure.rs  manifests.rs  mod.rs
crates/lattice-cilium/: Cargo.toml  build.rs
crates/lattice-cilium/src/: lib.rs
crates/lattice-cilium/src/install/: controller.rs  ensure.rs  manifests.rs  mod.rs
crates/lattice-cli/: Cargo.toml
crates/lattice-cloud-provider/: Cargo.toml
crates/lattice-cluster/: Cargo.toml  build.rs
crates/lattice-common/: Cargo.toml
crates/lattice-core/: Cargo.toml
crates/lattice-core/src/: lib.rs  system_namespaces.rs  template_types.rs
crates/lattice-cost/: Cargo.toml
crates/lattice-crd/: Cargo.toml
crates/lattice-dns-provider/: Cargo.toml
crates/lattice-eso/: Cargo.toml  build.rs
crates/lattice-gpu-operator/: Cargo.toml  build.rs
crates/lattice-graph/: Cargo.toml
crates/lattice-graph/benches/: service_graph.rs
crates/lattice-graph/src/: lib.rs
crates/lattice-helm-build/: Cargo.toml
crates/lattice-helm-build/src/: lib.rs
crates/lattice-image-provider/: Cargo.toml
crates/lattice-infra/: Cargo.toml  build.rs
crates/lattice-istio/: Cargo.toml  build.rs
crates/lattice-istio/src/: lib.rs
crates/lattice-istio/src/install/: controller.rs  ensure.rs  manifests.rs  mod.rs  trust_domain.rs
crates/lattice-job/: Cargo.toml
crates/lattice-keda/: Cargo.toml  build.rs
crates/lattice-kthena/: Cargo.toml  build.rs
crates/lattice-kthena/src/: lib.rs
crates/lattice-kthena/src/install/: controller.rs  ensure.rs  manifests.rs  mod.rs  policies.rs
crates/lattice-mesh-member/: Cargo.toml
crates/lattice-metrics-server/: Cargo.toml  build.rs
crates/lattice-metrics-server/src/: lib.rs
crates/lattice-metrics-server/src/install/: controller.rs  ensure.rs  manifests.rs  mod.rs
crates/lattice-model/: Cargo.toml
crates/lattice-move/: Cargo.toml
crates/lattice-operator/: Cargo.toml  build.rs
crates/lattice-package/: Cargo.toml
crates/lattice-package/src/: controller.rs  error.rs  helm.rs  lib.rs  mesh.rs  secrets.rs
crates/lattice-proto/: Cargo.toml  build.rs
crates/lattice-quota/: Cargo.toml
crates/lattice-render/: Cargo.toml
crates/lattice-render/src/: lib.rs  provisioner.rs  renderer.rs
crates/lattice-rook/: Cargo.toml  build.rs
crates/lattice-rook/src/: lib.rs
crates/lattice-rook/src/install/: controller.rs  ensure.rs  manifests.rs  mod.rs
crates/lattice-secret-provider/: Cargo.toml
crates/lattice-service/: Cargo.toml
crates/lattice-template/: Cargo.toml
crates/lattice-template/benches/: expand.rs
crates/lattice-template/src/: context.rs  directive.rs  error.rs  expand.rs  inline.rs  lib.rs
crates/lattice-tetragon/: Cargo.toml  build.rs
crates/lattice-tetragon-policy/: Cargo.toml
crates/lattice-tetragon-policy/src/: compiler.rs  lib.rs
crates/lattice-tetragon/src/: compiler.rs  lib.rs
crates/lattice-tetragon/src/install/: controller.rs  ensure.rs  manifests.rs  mod.rs
crates/lattice-velero/: Cargo.toml  build.rs
crates/lattice-victoria-metrics/: Cargo.toml  build.rs
crates/lattice-victoria-metrics/src/: lib.rs
crates/lattice-victoria-metrics/src/install/: controller.rs  ensure.rs  manifests.rs  mod.rs  policies.rs
crates/lattice-volcano/: Cargo.toml  build.rs
crates/lattice-volcano-policy/: Cargo.toml
crates/lattice-volcano-policy/src/: autoscaling_compiler.rs  lib.rs  routing_compiler.rs  types.rs
crates/lattice-volcano/src/: autoscaling_compiler.rs  compiler.rs  lib.rs  model_serving_compiler.rs  routing_compiler.rs  types.rs
crates/lattice-volcano/src/install/: controller.rs  ensure.rs  manifests.rs  mod.rs
crates/lattice-webhook/: Cargo.toml
crates/lattice-workload/: Cargo.toml
design/: mesh-member.md
docs/: autoscaling-v1.md  e2e-tests.md  lattice-controller-core-plan.md  lattice-gpu-platform-v1.md  lattice-model-implementation-plan.md  model-serving-v1.md  proxmox-setup.md
docs/design/: SCORE_TEMPLATING_PLAN.md  basis-bgp-controller.md  canary-strategy.md  cilium-bgp-on-basis.md  cilium-kube-proxy-replacement.md  cluster-autoscaler.md  cross-cluster-service-discovery.md  gpu-cloud-product.md  lattice-package.md  lattice-template.md  multi-cluster-service-mesh.md  network-topology-scheduling.md  scheduling.md  sidecars-and-security-context.md  tetragon-runtime-enforcement.md  training-jobs.md  upgrades.md  workload-ref-patch-mode.md
docs/guides/: cluster-management.md  getting-started.md  mesh-networking.md
docs/providers/: README.md  aws.md  docker.md  openstack.md  proxmox.md
docs/reference/: crd-reference.md
examples/: README.md
examples/cluster/: management-cluster.yaml  proxmox-cluster.yaml
examples/homelab/: README.md  backend-cluster.yaml  (+1 more)
examples/homelab/route-adapter/: Cargo.toml  Dockerfile  build.sh
examples/homelab/route-adapter/src/: main.rs
proto/: agent.proto
scripts/: bootstrap-cluster.sh  docker-build.sh  mirror-images.sh  proxmox-cleanup.sh  repro-istio-mc-502.sh  test-aws.sh  test-docker.sh  test-proxmox.sh
src/: cilium.rs  error.rs  fips.rs  lib.rs  main.rs  proto.rs
(+722 files in other folders)
