[package]
name = "lattice-capi"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cluster API provider management for Lattice"

[features]
fips = ["lattice-common/fips"]

[dependencies]
# Internal
lattice-common = { workspace = true }
lattice-core = { workspace = true }
lattice-crd = { workspace = true }
lattice-infra = { workspace = true }
lattice-secret-provider = { workspace = true }
# Each migrated dependency install crate contributes its registries to the
# upstream-mirror aggregator in `provider::registry`. Add one per migration.
lattice-tetragon = { workspace = true }
lattice-eso = { workspace = true }
lattice-cert-manager = { workspace = true }
lattice-volcano = { workspace = true }
lattice-cilium = { workspace = true }
lattice-istio = { workspace = true }

# Kubernetes
kube = { workspace = true }
k8s-openapi = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Random
rand = { workspace = true }

# Security
zeroize = { workspace = true }

[build-dependencies]
toml.workspace = true
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tokio-test = { workspace = true }
mockall = { workspace = true }
