[package]
name = "lattice-cert-manager"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "cert-manager dependency install — helm manifests, controller"
build = "build.rs"

[dependencies]
lattice-common = { workspace = true }
lattice-crd = { workspace = true }

kube = { workspace = true }
k8s-openapi = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[build-dependencies]
lattice-helm-build.workspace = true
