[package]
name = "lattice-metrics-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "metrics-server dependency install — helm manifests, controller"
build = "build.rs"

[dependencies]
lattice-common = { workspace = true }
lattice-crd = { workspace = true }

kube = { workspace = true }
k8s-openapi = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[build-dependencies]
lattice-helm-build.workspace = true
