[package]
name = "lattice-package"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "LatticePackage controller — Helm chart lifecycle with secret injection"

[dependencies]
# Internal
lattice-common = { workspace = true }
lattice-cedar = { workspace = true }
lattice-secret-provider = { workspace = true }
lattice-template = { workspace = true }
lattice-cache = { workspace = true }

# Kubernetes
kube = { workspace = true }
k8s-openapi = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Async
tokio = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
