[package]
name = "lattice-render"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Workload rendering pipeline — compiles CRD specs into K8s pod templates"

[dependencies]
lattice-core.workspace = true
lattice-crd.workspace = true
lattice-graph.workspace = true
lattice-template.workspace = true
kube.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
