[package]
name = "lattice-tetragon"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tetragon dependency install — helm manifests, baseline TracingPolicy, controller"
build = "build.rs"

[dependencies]
lattice-common = { workspace = true }
lattice-crd = { workspace = true }

# Kubernetes
kube = { workspace = true }
k8s-openapi = { workspace = true }

# Async
tokio = { workspace = true }

# Serialization
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }

[build-dependencies]
lattice-helm-build.workspace = true

[dev-dependencies]
serde_json = { workspace = true }
