[package]
name = "lattice-victoria-metrics"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "VictoriaMetrics K8s Stack install — helm manifests, controller"
build = "build.rs"

[dependencies]
lattice-common = { workspace = true }
lattice-core = { workspace = true }
lattice-crd = { workspace = true }

kube = { workspace = true }
k8s-openapi = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
tracing = { workspace = true }

[build-dependencies]
lattice-helm-build.workspace = true
