[package]
name = "lattice-volcano-policy"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "LatticeJob/LatticeModel -> Volcano VCJob + Kthena ModelServing compilers"

[dependencies]
lattice-common = { workspace = true }
lattice-crd = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
