[package]
name = "lattice-route-adapter"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

[[bin]]
name = "lattice-route-adapter"
path = "src/main.rs"

[dependencies]
kube = { version = "3.1", features = ["runtime", "derive", "client", "rustls-tls"] }
k8s-openapi = { version = "0.27", features = ["v1_32"] }
tokio = { version = "1.52", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
futures = "0.3"
schemars = "1"
libc = "0.2"
